--- a/style.css
+++ b/style.css
@@ -330,10 +330,6 @@ header {
     text-decoration: none;
 }
 
-#myBtn-photo:hover {
-    background-color: #cccaca;
-}
-
 .modal-photo {
     display: none;
     position: fixed;
@@ -528,7 +524,6 @@ header {
     transform: scale(1.2);
 }
 
-
 .thumbnail-container {
     text-align: center; 
     width: 80px;
@@ -545,11 +540,84 @@ header {
     margin-top: 7px;
 
 }
+
 .thumbnail-container img.arrow-img-droite {
     display: block;
     margin-top: 7px;
     margin-left: 54px;
-
 }
 
+/* PHOTO BLOCK */
+
+.related-images {
+    max-width: 1126px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+}
+
+.related-images h3 {
+    font-family: 'Space Mono', sans-serif;
+    font-size: 18px; 
+    font-weight: 400;
+    line-height: 26.66px;
+    letter-spacing: 0.1em;
+    text-align: left;
+}
+
+.image-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px; 
+}
+
+.related-image {
+    flex: 1;
+    margin-right: 10px;
+    text-align: center;
+}
+
+.image-wrapper {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+}
+
+.image-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home-button {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-top: 20px;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 272px;
+    height: 50px;
+    background-color: #D8D8D8;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 2px;
+    font-weight: bold;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    font-family: Space Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 17.77px;
+    letter-spacing: 0em;
+    text-align: center;
+    border: none;
+}
 
