--- a/style.css
+++ b/style.css
@@ -621,3 +621,32 @@ header {
     border: none;
 }
 
+/* HERO */
+
+.hero {
+    position: relative;
+    height: 782px;
+}
+
+.hero-image {
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    position: relative;
+    background-image: url('/assets/images/fallback-hero.png'); 
+}
+
+.hero-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        height: 400px; 
+    }
+}
