Intégration Liste des photos

--- a/style.css
+++ b/style.css
@@ -650,3 +650,46 @@ header {
         height: 400px; 
     }
 }
+
+/* LISTE PHOTOS */
+
+.custom-post-thumbnails {
+    max-width: 1126px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+}
+
+.thumbnail-container-accueil {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.custom-post-thumbnail {
+    flex-basis: calc(50% - 10px);
+    margin-bottom: 20px;
+}
+
+.thumbnail-wrapper {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+}
+
+.thumbnail-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.view-all-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
