--- a/style.css
+++ b/style.css
@@ -814,3 +814,133 @@ header {
     color: #ffffff;
     background-color: #000000;
 }
+
+/* FILTRES */
+
+.filters-and-sort {
+    max-width: 1126px;  
+    text-align: center;  
+    padding: 40px;  
+    padding-bottom: 25px;  
+}
+
+.filters-and-sort label, .filters-and-sort select {
+    font-family: Poppins;  
+    font-size: 12px;  
+    font-weight: 500;  
+    line-height: 18px;  
+    letter-spacing: 0.03em;  
+    text-align: left;  
+    text-transform: uppercase;  
+}
+
+#category-filter,
+#format-filter,
+#date-sort{
+    width: 260px;  
+    height: 42px;  
+    padding: 11px 18px 11px 18px;  
+    margin-bottom: 20px; 
+    border-radius: 8px;  
+    border: 1.3px solid #B8BBC2;  
+    justify-content: space-between;
+}
+
+/* LIGHTBOX */
+
+
+.btn-close {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    color: #fff;
+    font-family: 'Space Mono', monospace;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 15px;
+    max-width: 40px;
+    max-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 10001;
+  }
+  
+  .btn-close:hover {
+    transform: scale(1.2);
+  }
+  
+  .right-container img {
+    cursor: pointer;
+  }
+  
+  .modal-container {
+    display: none !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 10000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-container.opened {
+    opacity: 1;
+    display: flex !important;
+  }
+  
+  .modal-container img {
+    max-height: 80vh;
+  }
+  
+  .left-arrow {
+    margin-right: 20px; 
+  }
+  
+  .right-arrow {
+    margin-left: 20px; 
+  }
+  
+  .left-arrow,
+  .right-arrow {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .info-photo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .info-photo > span {
+    padding: 20px;
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase !important;
+  }
+  
+  .modal-container a {
+    text-decoration: none;
+    color: white;
+    outline: none;
+    font-family: 'Space Mono', monospace;
+    font-size: 14px;
+    font-weight: 400;
+  }
