--- a/style.css
+++ b/style.css
@@ -1,946 +1,7 @@
-/* FONTS */
-
-/* p */
-@font-face {
-    font-family: 'Poppins';
-    src: url('fonts/Poppins/Poppins-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-/* description + h3 */
-@font-face {
-    font-family: 'Space_Mono';
-    src: url('fonts/Space_Mono/SpaceMono-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-/* h2 */
-@font-face {
-    font-family: 'Space_Mono';
-    src: url('fonts/Space_Mono/SpaceMono-Italic.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;
-}
-/* h1 */
-@font-face {
-    font-family: 'Space_Mono';
-    src: url('fonts/Space_Mono/SpaceMono-BoldItalic.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
-}
-
-/* Styles pour les écrans de bureau */
-@media only screen and (min-width: 768px) {
-    /* Paragraphs */
-    p {
-        font-family: 'Poppins', sans-serif;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 21px;
-    }
-
-    /* Description */
-    .description {
-        font-family: 'Space Mono', monospace;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 21px;
-    }
-
-    /* H3 */
-    h3 {
-        font-family: 'Space Mono', monospace;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 27px;
-    }
-
-    /* H2 */
-    h2 {
-        font-family: 'Space Mono', monospace;
-        font-size: 66px;
-        font-style: italic;
-        font-weight: 400;
-        line-height: 58px;
-    }
-
-    /* H1 */
-    h1 {
-        font-family: 'Space Mono', monospace;
-        font-size: 96px;
-        font-style: italic;
-        font-weight: 700;
-        line-height: 142px;
-    }
-}
-
-/* Styles pour les appareils mobiles */
-@media only screen and (max-width: 767px) {
-    /* Menu */
-    .font-menu {
-        font-family: 'Space Mono', monospace;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-    }
-    /* Paragraphs */
-    p {
-        font-family: 'Poppins', sans-serif;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 21px;
-    }
-
-    /* Description */
-    .description {
-        font-family: 'Space Mono', monospace;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 21px;
-    }
-
-    /* H3 */
-    h3 {
-        font-family: 'Space Mono', monospace;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 27px;
-    }
-
-    /* H2 */
-    h2 {
-        font-family: 'Space Mono', monospace;
-        font-size: 46px;
-        font-style: italic;
-        font-weight: 400;
-        line-height: 48px;
-    }
-
-    /* H1 */
-    h1 {
-        font-family: 'Space Mono', monospace;
-        font-size: 28px;
-        font-style: italic;
-        font-weight: 700;
-        line-height: 41px;
-    }
-}
-
-/* HEADER */
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-}
-
-.header-logo img {
-    max-width: 300px;
-}
-
-.header-menu {
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-}
-
-.header-menu li a,
-.footer-menu li a,
-#open-modal-button-header {
-    text-decoration: none;
-    color: #000;
-    font-family: "Space Mono", monospace;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 23.7px;
-    letter-spacing: 0.1em;
-    text-align: left;
-}
-
-.header-menu li a {
-    margin: 0 20px;
-}
-
-
-.header-menu ul,
-.footer-menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.header-menu li,
-.footer-menu li {
-    margin-right: 20px;
-}
-
-#open-modal-button-header,
-#open-modal-button-footer {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-}
-
-
-/* FOOTER */
-
-.footer-menu {
-    text-align: center; 
-    margin-top: 20px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 2px solid #000;
-    padding-top: 10px;
-    text-transform: uppercase;
-}
-
-.footer-menu li {
-    margin: 0 15px;
-}
-
-.footer-menu a {
-    text-decoration: none;
-    padding-top: 5px; 
-    margin: 0 40px;
-}
-
-
-/* MODAL */
-
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    background-color: rgba(0, 0, 0, 0.4); 
-    overflow: auto; 
-}
-
-.modal-img {
-    margin-top: 20px; 
-}
-
-
-/* MODAL CONTENT */
-
-.modal-content {
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    width: 597px; 
-    height: 769px; 
-    background-color: #fff;
-    border: 5px solid #000;
-}
-
-/* MODALE CONTACT FORM */
-
-.wpcf7 {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.wpcf7-form input[type="text"],
-.wpcf7-form input[type="email"] {
-  width: 263px;
-  height: 40px;
-  border-radius: 8px;
-  border: 1px solid #B8BBC2;
-}
-
-.wpcf7-form textarea {
-    width: 263px;
-    height: 210px;
-    border-radius: 8px;
-    border: 1px solid #B8BBC2;
-}
-
-.wpcf7-form .wpcf7-submit {
-    display: block;
-    margin: 0 auto;
-    width: 263px;
-    height: 50px;
-    border-radius: 2px;
-    background-color: #D8D8D8;
-    font-family: 'Space Mono', monospace;
-    font-size: 12px;
-    text-align: center;
-}
-
-.wpcf7-submit:hover {
-    background-color: black;
-    color: white;
-}
-
-/* BUTTON CLOSE */
-
-.close {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 24px;
-        cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* SINGLE */
-
-.zone-contenu,
-.zone-contact {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1126px;
-    margin: 0 auto;
-}
-
-#myBtn-photo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 232px;
-    height: 50px;
-    border-radius: 2px;
-    transition: .3s ease-in-out;
-    cursor: pointer;
-    font-family: Space Mono;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 17.77px;
-    letter-spacing: 0em;
-    text-align: center;
-    border: none;
-    background-color: #D8D8D8;
-    color: #000000;
-    text-decoration: none;
-}
-
-.modal-photo {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.822);
-    overflow: auto;
-}
-
-.modal-content-photo {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: auto;
-    max-width: 80%;
-    height: auto;
-    background-color: #fff;
-    padding: 20px;
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.8s;
-    animation-name: animatetop;
-    animation-duration: 0.8s;
-    animation-timing-function: ease;
-}
-
-.close-photo {
-    font-family: "Space Mono", monospace;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-
-.close-photo:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.close-photo:hover {
-    text-decoration: underline;
-}
-
-/* MOBILE - MODALE */
-@media (max-width: 768px) {
-    .modal-content-photo {
-        max-width: 95%;
-    }
-}
-
-.texte-contact p {
-    font-family: Poppins;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 21px;
-}
-
-.left-container,
-.left-contact {
-    align-content: center;
-    flex: 1;
-    position: relative;
-    max-width: 50%;
-    height: auto;
-}
-
-.left-container,
-.zone-contact {
-    border-bottom: 2px solid #000;
-}
-
-.left-contact {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.left-container h1 {
-    font-family: 'Space Mono', monospace;
-    font-weight: 400;
-    font-style: italic;
-    font-size: 66px;
-    line-height: 58px;
-    text-transform: uppercase;
-}
-
-.left-container p {
-    font-family: 'Space Mono', monospace;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20.73px;
-    letter-spacing: 10%;
-    text-transform: uppercase;
-}
-
-.right-container,
-.photo {
-    flex: 1;
-    position: relative;
-    max-width: 50%;
-    height: auto;
-}
-
-.right-container.mobile-first {
-    order: -1;
-}
-
-.photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-@media (max-width: 768px) {
-    .zone-contenu,
-    .zone-contact,
-    .left-container,
-    .right-container {
-        flex-basis: 100%;
-        max-width: 100%;
-    }
-
-    .zone-contenu.mobile-first {
-        flex-direction: column-reverse;
-    }
-
-    .right-container .photo img {
-        max-width: 100%;
-        height: auto;
-        width: auto;
-        object-fit: contain;
-    }
-
-    .left-contact {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .left-contact .texte-contact,
-    .left-contact div {
-        width: 100%;
-    }
-}
-
-@media (min-width: 1024px) {
-    .left-container {
-        padding-top: 52vh;
-    }
-
-    .right-container {
-        margin-left: 20px;
-    }
-}
-
-@media (max-width: 768px) {
-
-    .prev-photo,
-    .next-photo {
-      display: none;
-    }
-  }
-
-  .right-contact > div {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 10px 0 30px 10px;
-}
-
-.arrow-img {
-    width: 33px;
-    height: 10px;
-    margin: 0 5px; 
-    vertical-align: middle;
-}
-
-.arrow-img-gauche,
-.arrow-img-droite {
-    transition: transform 0.2s ease;
-}
-
-.arrow-img-gauche:hover,
-.arrow-img-droite:hover {
-    transform: scale(1.2);
-}
-
-.thumbnail-container {
-    text-align: center; 
-    width: 80px;
-    height: 80px; 
-}
-
-.thumbnail-container img {
-    max-width: 100%; 
-    max-height: 100%;
-}
-
-.thumbnail-container img.arrow-img-gauche {
-    display: block;
-    margin-right: 7px;
-    margin-top: 7px;
-}
-
-.thumbnail-container img.arrow-img-droite {
-    display: block;
-    margin-top: 7px;
-    margin-left: 54px;
-}
-
-/* PHOTO BLOCK */
-
-.related-images {
-    max-width: 1126px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px;
-}
-
-.related-images h3 {
-    font-family: 'Space Mono', sans-serif;
-    font-size: 18px; 
-    font-weight: 400;
-    line-height: 26.66px;
-    letter-spacing: 0.1em;
-    text-align: left;
-}
-
-.image-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px; 
-}
-
-.related-image {
-    flex: 1;
-    margin-right: 10px;
-    text-align: center;
-}
-
-.image-wrapper {
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 100%;
-}
-
-.image-wrapper img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.home-button {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin-top: 20px;
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    width: 272px;
-    height: 50px;
-    background-color: #D8D8D8;
-    color: #000000;
-    text-decoration: none;
-    border-radius: 2px;
-    font-weight: bold;
-    transition: .3s ease-in-out;
-    cursor: pointer;
-    font-family: Space Mono;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 17.77px;
-    letter-spacing: 0em;
-    text-align: center;
-    border: none;
-}
-
-.thumbnail-overlay-single {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.3s;
-    text-align: center;
-}
-
-.thumbnail-overlay-single:hover {
-    opacity: 1;
-}
-
-.photo-info {
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 10px;
-    color: white;
-    font-family: 'Space Mono', monospace;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    letter-spacing: 0.1em;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.photo-info-left,
-.photo-info-right {
-    width: 60%;
-}
-
-.thumbnail-overlay-single img {
-    width: 46px;
-    height: 32px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.fullscreen-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #fff;
-}
-
-/* HERO */
-
-.hero {
-    position: relative;
-    height: 782px;
-}
-
-.hero-image {
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    position: relative;
-    background-image: url('/assets/images/fallback-hero.png'); 
-}
-
-.hero-image img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    height: auto;
-}
-
-@media screen and (max-width: 768px) {
-    .hero {
-        height: 400px; 
-    }
-}
-
-/* LISTE PHOTOS */
-
-.custom-post-thumbnails {
-    max-width: 1126px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px;
-}
-
-.thumbnail-container-accueil {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.custom-post-thumbnail {
-    flex-basis: calc(50% - 10px);
-    margin-bottom: 20px;
-}
-
-.thumbnail-wrapper {
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 100%;
-}
-
-.thumbnail-wrapper img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.thumbnail-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.3s;
-}
-
-.thumbnail-wrapper:hover .thumbnail-overlay {
-    opacity: 1;
-}
-
-.thumbnail-overlay img {
-    width: 46px;
-    height: 32px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.fullscreen-icon {
-    color: white;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.view-all-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-
-#load-more-posts {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    width: 272px;
-    height: 50px;
-    background-color: #D8D8D8;
-    color: #000000;
-    text-decoration: none;
-    border-radius: 2px;
-    font-weight: bold;
-    transition: .3s ease-in-out;
-    cursor: pointer;
-    font-family: Space Mono;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 17.77px;
-    letter-spacing: 0em;
-    text-align: center;
-    border: none;
-    margin-top: 20px;
-}
-
-#load-more-posts:hover {
-    color: #ffffff;
-    background-color: #000000;
-}
-
-/* FILTRES */
-
-.filters-and-sort {
-    max-width: 1126px;  
-    text-align: center;  
-    padding: 40px;  
-    padding-bottom: 25px;  
-}
-
-.filters-and-sort label, .filters-and-sort select {
-    font-family: Poppins;  
-    font-size: 12px;  
-    font-weight: 500;  
-    line-height: 18px;  
-    letter-spacing: 0.03em;  
-    text-align: left;  
-    text-transform: uppercase;  
-}
-
-#category-filter,
-#format-filter,
-#date-sort{
-    width: 260px;  
-    height: 42px;  
-    padding: 11px 18px 11px 18px;  
-    margin-bottom: 20px; 
-    border-radius: 8px;  
-    border: 1.3px solid #B8BBC2;  
-    justify-content: space-between;
-}
-
-/* LIGHTBOX */
-
-
-.btn-close {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    color: #fff;
-    font-family: 'Space Mono', monospace;
-    font-size: 18px;
-    font-weight: 600;
-    padding: 15px;
-    max-width: 40px;
-    max-height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 10001;
-  }
-  
-  .btn-close:hover {
-    transform: scale(1.2);
-  }
-  
-  .right-container img {
-    cursor: pointer;
-  }
-  
-  .modal-container {
-    display: none !important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.9);
-    z-index: 10000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-container.opened {
-    opacity: 1;
-    display: flex !important;
-  }
-  
-  .modal-container img {
-    max-height: 80vh;
-  }
-  
-  .left-arrow {
-    margin-right: 20px; 
-  }
-  
-  .right-arrow {
-    margin-left: 20px; 
-  }
-  
-  .left-arrow,
-  .right-arrow {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-  }
-  
-  .info-photo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .info-photo > span {
-    padding: 20px;
-    color: white;
-    font-family: 'Space Mono', monospace;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    letter-spacing: 0.1em;
-    text-transform: uppercase !important;
-  }
-  
-  .modal-container a {
-    text-decoration: none;
-    color: white;
-    outline: none;
-    font-family: 'Space Mono', monospace;
-    font-size: 14px;
-    font-weight: 400;
-  }
+/*
+Theme Name: Nathalie Mota
+Author: Keshia Gabali
+Description: Nathalie Mota - Photographe Freelance
+Version: 1.0
+Text Domain: nathalie-mota
+*/
