--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    height: 782px;
+    height: 962px;
 }
 
 .hero-image {
@@ -18,6 +18,7 @@
     transform: translate(-50%, -50%);
     max-width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 /* MEDIA HERO */
