--- a/css/liste-photo.css
+++ b/css/liste-photo.css
@@ -61,18 +61,32 @@
     transform: translate(-50%, -50%);  
 }
 
-.fullscreen-icon {
-    color: white;  
+.thumbnail-overlay-single img {
+    width: 46px; 
+    height: 32px;  
     position: absolute;  
-    top: 10px;  
-    right: 10px;
+    top: 50%; 
+    left: 50%;  
+    transform: translate(-50%, -50%);  
 }
+
+.fullscreen-icon {
+    position: absolute;
+    top: 30px;  
+    right: 30px;
+}
+
+.fullscreen-icon img {
+    width: 34px;
+    height: 34px;
+}
+
 
 .view-all-button {
     display: flex;  
     justify-content: center;  
     align-items: center;  
-    margin-top: 20px; 
+    margin-bottom: 40px; 
 }
 
 #load-more-posts {
@@ -85,7 +99,6 @@
     color: #000000;  
     text-decoration: none;  
     border-radius: 2px;  
-    font-weight: bold;  
     transition: .3s ease-in-out;  
     cursor: pointer;  
     font-family: Space Mono;  
@@ -136,7 +149,7 @@
 #format-filter,
 #date-sort{
     width: 260px;  
-    height: 42px;  
+    height: 43px;  
     padding: 11px 18px 11px 18px;  
     margin-bottom: 20px; 
     border-radius: 8px;  
