--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 /* p */
 @font-face {
-    font-family: 'Poppins';
+    font-family: 'Poppins Light';
     src: url('fonts/Poppins/Poppins-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
