--- a/css/liste-photo.css
+++ b/css/liste-photo.css
@@ -122,7 +122,7 @@
     max-width: 1126px;  
     margin: 0 auto;  
     text-align: center;  
-    padding-top: 40px; 
+    margin-top: 90px; 
     display: flex; 
     justify-content: start;
 }
@@ -138,11 +138,11 @@
 }
 
 #category-filter{
-    margin-right: 42px;
+    margin-right: 30px;
 }
 
 #date-sort{
-    margin-left: 310px;
+    margin-left: 320px;
 }
 
 #category-filter,
