--- a/css/single.css
+++ b/css/single.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 232px;
+    width: 272px;
     height: 50px;
     border-radius: 2px;
     transition: .3s ease-in-out;
@@ -28,7 +28,8 @@
 }
 
 #myBtn-photo:hover {
-    background-color: #cccaca;
+    background-color: black;
+    color: #fff;
 }
 
 .texte-contact p {
@@ -59,9 +60,10 @@
     justify-content: space-between;
     padding-top: 20px;
     padding-bottom: 30px;
+    margin-top: 20px;
 }
 
-.left-container h1 {
+.left-contenu h2 {
     font-family: 'Space Mono', monospace;
     font-weight: 400;
     font-style: italic;
@@ -290,6 +292,7 @@
     margin: 0 auto;
     text-align: center;
     padding: 20px;
+    margin-top: 40px;
 }
 
 .related-images h3 {
@@ -304,7 +307,8 @@
 .image-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px; 
+    margin-top: 60px; 
+    margin-bottom: 70px;
 }
 
 .related-image {
@@ -327,7 +331,6 @@
     height: 100%;
     object-fit: cover;
 }
-
 
 /* MODAL */
 
