--- a/css/liste-photo.css
+++ b/css/liste-photo.css
@@ -103,7 +103,7 @@
     border-radius: 2px;  
     transition: .3s ease-in-out;  
     cursor: pointer;  
-    font-family: Space Mono;  
+    font-family: "Space Mono";  
     font-size: 12px;  
     font-weight: 400;  
     line-height: 17.77px;  
