--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -15,9 +15,9 @@
 .lightbox__container img {
     max-width: 100%;
     height: auto;
-    object-fit: contain;
-    width: 565px;
-    height: 495px !important;
+    object-fit: cover;
+    /*width: 565px;
+    height: 495px !important;*/
 }
 
 .lightbox__container {
@@ -34,8 +34,8 @@
     border: none;
     background: none;
     position: fixed;
-    top: 10%;
-    right: 20%;
+    top: 5%;
+    right: 10%;
     z-index: 12;
 }
 
@@ -54,11 +54,11 @@
 }
 
 .lightbox__prev {
-    left: 18%;    
+    left: 5%;    
 }
 
 .lightbox__next {
-    right: 20%;    
+    right: 5%;    
 }
     
 .lightbox__prev img {
@@ -88,7 +88,8 @@
     justify-content: space-between;
     position: absolute;
     bottom: 0;
-    width: 564px;
+    /*width: 564px;*/
+    width: 71%;
     padding: 10px;
     color: white;
     font-family: 'Space Mono';
@@ -100,7 +101,7 @@
     text-transform: uppercase;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 172px;
+    margin-bottom: 10px;
 }
 
 
